feat: simple way to get all the ways through a procedure.